[package]
name = "db_sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = { path = "../lib" }
nats = "0.24.0"
serde = "1.0.188"
serde_json = "1.0.105"
uuid = { version = "1.4.1", features = ["serde", "v4"] }
