[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
lazy_static = "1.4.0"
lib = { path = "../lib" }
nats = "0.24.0"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.105"
tokio = { version = "1.12.0", features = ["full"] }
